webapp/tasks/python/keyword-as-identifier/python-errors.txt
  File "main.py", line 2
    import = 423
           ^
SyntaxError: invalid syntax
